Fixed spacing for contact links (1ch)

--- a/styles/style.css
+++ b/styles/style.css
@@ -300,7 +300,7 @@ input[type=reset]:active {
 }
 
 .contact-link > * {
-    margin-right:var(--bm-section-p);
+    margin-right: 1ch;
     /* … */
 }
 
